--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,6 +4,7 @@ Version: 0.0-0
 Authors@R: person("Kirill", "Müller", role = c("aut", "cre"), email = "krlmlr+r@mailbox.org")
 Description: Provides a basic 'dplyr' interface to 'fst' data sources.
 Imports: 
+    dplyr,
     fst
 License: GPL-3
 Encoding: UTF-8
@@ -12,3 +13,4 @@ Date: 2018-01-09
 BugReports: https://github.com/krlmlr/fstplyr/issues
 URL: https://github.com/krlmlr/fstplyr, http://krlmlr.github.io/fstplyr
 Roxygen: list(markdown = TRUE)
+RoxygenNote: 6.0.1
