--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,14 @@
 
 S3method(collect,tbl_fst)
 S3method(dim,tbl_fst)
+S3method(dimnames,tbl_fst)
 S3method(format,src_fst)
 S3method(head,tbl_fst)
+S3method(select,tbl_fst)
 S3method(src_tbls,src_fst)
 S3method(tbl,src_fst)
 export(src_fst)
 import(dplyr)
 import(fst)
+import(rlang)
 importFrom(utils,head)
