--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: A 'dplyr' Interface to 'fst'
 Version: 0.0-0
 Authors@R: person("Kirill", "Müller", role = c("aut", "cre"), email = "krlmlr+r@mailbox.org")
 Description: Provides a basic 'dplyr' interface to 'fst' data sources.
-Imports: 
+Imports:
     dplyr,
     fst,
     rlang,
@@ -16,5 +16,8 @@ BugReports: https://github.com/krlmlr/fstplyr/issues
 URL: https://github.com/krlmlr/fstplyr, http://krlmlr.github.io/fstplyr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
-Suggests: 
-    testthat
+Suggests:
+    testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
