satisfy R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,9 +42,13 @@ S3method(tbl_vars,tbl_fst)
 S3method(ungroup,tbl_fst)
 S3method(union,tbl_fst)
 S3method(union_all,tbl_fst)
-export(default_missing.tbl_fst)
 export(src_fst)
 import(dplyr)
 import(fst)
 import(rlang)
+importFrom(dplyr,filter)
+importFrom(dplyr,intersect)
+importFrom(dplyr,setdiff)
+importFrom(dplyr,setequal)
+importFrom(dplyr,union)
 importFrom(utils,head)
