--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,13 +42,44 @@ S3method(tbl_vars,tbl_fst)
 S3method(ungroup,tbl_fst)
 S3method(union,tbl_fst)
 S3method(union_all,tbl_fst)
+export(anti_join)
+export(arrange)
+export(as.tbl)
+export(as.tbl_cube)
+export(collapse)
+export(collect)
+export(compute)
+export(distinct)
+export(do)
+export(filter)
+export(full_join)
+export(group_by)
+export(group_indices)
+export(group_size)
+export(groups)
+export(inner_join)
+export(intersect)
+export(left_join)
+export(mutate)
+export(n_groups)
+export(pull)
+export(right_join)
+export(same_src)
+export(sample_frac)
+export(sample_n)
+export(semi_join)
+export(setdiff)
+export(setequal)
+export(slice)
 export(src_fst)
+export(src_tbls)
+export(summarise)
+export(tbl)
+export(tbl_vars)
+export(ungroup)
+export(union)
+export(union_all)
 import(dplyr)
 import(fst)
 import(rlang)
-importFrom(dplyr,filter)
-importFrom(dplyr,intersect)
-importFrom(dplyr,setdiff)
-importFrom(dplyr,setequal)
-importFrom(dplyr,union)
 importFrom(utils,head)
