reexport pipe, better example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ S3method(tbl_vars,tbl_fst)
 S3method(ungroup,tbl_fst)
 S3method(union,tbl_fst)
 S3method(union_all,tbl_fst)
+export("%>%")
 export(anti_join)
 export(arrange)
 export(as.tbl)
@@ -63,10 +64,12 @@ export(left_join)
 export(mutate)
 export(n_groups)
 export(pull)
+export(rename)
 export(right_join)
 export(same_src)
 export(sample_frac)
 export(sample_n)
+export(select)
 export(semi_join)
 export(setdiff)
 export(setequal)
