--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,24 +1,24 @@
 Package: fstplyr
 Title: A 'dplyr' Interface to 'fst'
 Version: 0.1-1
+Date: 2018-01-09
 Authors@R: person("Kirill", "Müller", role = c("aut", "cre"), email = "krlmlr+r@mailbox.org")
 Description: Provides a basic 'dplyr' interface to 'fst' data sources.
-Imports:
+License: GPL-3
+URL: https://github.com/krlmlr/fstplyr, http://krlmlr.github.io/fstplyr
+BugReports: https://github.com/krlmlr/fstplyr/issues
+Imports: 
     dplyr,
     fst,
     rlang,
     tibble,
     tidyselect
-License: GPL-3
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
-Date: 2018-01-09
-BugReports: https://github.com/krlmlr/fstplyr/issues
-URL: https://github.com/krlmlr/fstplyr, http://krlmlr.github.io/fstplyr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.0.1
-Suggests:
-    testthat,
-    knitr,
-    rmarkdown
-VignetteBuilder: knitr
