--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Imports:
     fst,
     rlang,
     tibble,
-    tidyselect
+    tidyselect,
+    cubelyr
 Suggests: 
     knitr,
     rmarkdown,
@@ -21,4 +22,4 @@ VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 7.1.1
