--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 S3method(anti_join,tbl_fst)
 S3method(arrange,tbl_fst)
 S3method(as.data.frame,tbl_fst)
-S3method(as.tbl,tbl_fst)
 S3method(as.tbl_cube,tbl_fst)
+S3method(as_tibble,tbl_fst)
 S3method(collapse,tbl_fst)
 S3method(collect,tbl_fst)
 S3method(compute,tbl_fst)
@@ -18,6 +18,7 @@ S3method(full_join,tbl_fst)
 S3method(group_by,tbl_fst)
 S3method(group_indices,tbl_fst)
 S3method(group_size,tbl_fst)
+S3method(group_vars,tbl_fst)
 S3method(groups,tbl_fst)
 S3method(head,tbl_fst)
 S3method(inner_join,tbl_fst)
@@ -46,8 +47,8 @@ S3method(union_all,tbl_fst)
 export("%>%")
 export(anti_join)
 export(arrange)
-export(as.tbl)
 export(as.tbl_cube)
+export(as_tibble)
 export(collapse)
 export(collect)
 export(compute)
@@ -58,6 +59,7 @@ export(full_join)
 export(group_by)
 export(group_indices)
 export(group_size)
+export(group_vars)
 export(groups)
 export(inner_join)
 export(intersect)
@@ -86,4 +88,5 @@ export(union_all)
 import(dplyr)
 import(fst)
 import(rlang)
+importFrom(cubelyr,as.tbl_cube)
 importFrom(utils,head)
