--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(semi_join)
 export(setdiff)
 export(setequal)
 export(slice)
+export(slice_dates)
 export(src_fst)
 export(src_tbls)
 export(summarise)
