Modify slice for endorsements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,7 +77,7 @@ export(semi_join)
 export(setdiff)
 export(setequal)
 export(slice)
-export(slice_dates)
+export(slice_endorsements)
 export(src_fst)
 export(src_tbls)
 export(summarise)
